Update and implement new Validator